<resources>
    <string name="app_name">Caos CWY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_settings_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--SALIO LILI , SALIOO!-->
    <string name="login">login2</string>
    <string name="credencialesErroneas">Incorrect username or password :(</string>
    <string name="title_app">Caos ClearWay</string>
    <string name="title_home">Form</string>
    <string name="title_incidente">Select Type of Incident in Transit</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="incidente">SELECT THE INCIDENT</string>
    <string name="miUbicacion">my location</string>
    <string name="cargaIncidente">INCIDENT LOAD</string>
    <string name="incidenteZona">INCIDENTS IN ZONE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--INICIO: Errores generales-->
    <string name="errorComprimirImagen">Could not compress the image</string>
    <string name="errorIsertarImagen">The image could not be inserted in the base</string>
    <string name="errorObtenerImagen">The base image could not be obtained</string>
    <string name="errorNoExisteElUsuario">There is no user in the base</string>

    <!--MENU CONTEXTUAL TEXT VIEW-->
    <string name="accion_nuevo">New</string>
    <string name="accion_actualizar">Update</string>
    <string name="accion_eliminar">Delete</string>
    <!--MENU CONTEXTUAL IMAGE VIEW-->
    <string name="accion_nuevo2">New</string>
    <string name="accion_actualizar2">Update</string>
    <string name="accion_eliminar2">Delete</string>



    <!--FIN: Errores generales-->
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_incidente_list">Incidents</string>
    <string name="title_incidente_detail">incident Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyB6VLOQjU6T5j7RUtm6vFmf2D-k0puK_Gc</string>
    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string name="str_de">Aleman</string>
    <string-array name="languages">

        <item>@string/str_en</item>
        <item>@string/str_es</item>
        <item>@string/str_de</item>
    </string-array>
    <string name="str_seleccion">Select the Language</string>
    <string name="comentario">make a comment</string>
    <string name="compartir">Share</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen2">FullscreenActivity2</string>
    <string name="title_activity_editar_incidente">Editar incidente</string>
</resources>
