<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorLightBlue"

    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/formularioContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        tools:context="com.example5.lilian.caos_cwy.FormularioFragment">


        <TextView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incidente"
            android:paddingTop="30dp"
            />

        <Spinner
            android:id="@+id/spAnimals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorOrange"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:entries="@array/animals"
            >

        </Spinner>


<!--
        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>-->

        <Button
            android:id="@+id/btnLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miUbicacion"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0.05" />




        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imagenContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imagenPrueba"
                android:layout_width="250dp"
                android:layout_height="220dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                />

            <ImageButton
                android:layout_marginLeft="20dp"
                android:layout_alignParentStart="true"
                android:id="@+id/eliminarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_close_clear_cancel" />



            <Button
                android:background="@drawable/ic_menu_camera"
                android:id="@+id/capturarIncidente"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/comentario"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:hint="@string/comentario"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:id="@+id/compartir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compartir"
                android:background="@color/colorTurquoise"
                />
        </RelativeLayout>
    </LinearLayout>



</ScrollView>

